--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "aws4": "^1.12.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.1",
     "mongoose": "^8.2.0",
+    "nanoid": "^5.0.6",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
     "next-cloudinary": "^5.20.0",
+    "nodemailer": "^6.9.11",
     "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/react": "^18.2.61",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
